fixing layout issue

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,7 +10,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.modalFull {
+.modalFullButton {
   cursor: pointer;
   font-size: 16px;
   width: 160px;
@@ -43,11 +43,12 @@ body {
 
 .modal1 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   width: 15vw;
   min-height: 100vh;
+  max-height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
   position: absolute;
@@ -58,11 +59,12 @@ body {
 
 .modal2 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   width: 15vw;
   min-height: 100vh;
+  max-height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
   position: absolute;
@@ -82,7 +84,7 @@ body {
   &__title {
     position: absolute;
     text-align: center;
-    font-size: 128px;
+    font-size: 64px;
     color: white;
     z-index: 3;
     font-weight: 700;
@@ -116,6 +118,31 @@ body {
     left: 96px;
     z-index: 2;
     transition: 0.35s ease-in-out;
+
+    &:hover {
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      transform: scale(1.1);
+    }
+  }
+
+  &__mute {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    cursor: pointer;
+    background-color: white;
+    padding: 15px;
+    position: absolute;
+    bottom: 32px;
+    left: 16px;
+    z-index: 2;
+    transition: 0.35s ease-in-out;
+    border-radius: 100px;
+
+    p{
+      margin-right: 5px;
+    }
 
     &:hover {
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -202,7 +229,7 @@ body {
 .bgImgleft {
   padding-left: 307px;
   padding-top: 400px;
-  transform: scale(0.75);
+  transform: scale(0.65);
   background-image: url("/assets/images/bd-aus.jpg");
 }
 
